<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@color/loginactivity_bg"
    >

    <View
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/title_background"
        />

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/percentRL_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/topview"
        app:layout_widthPercent="@string/title_width"
        app:layout_heightPercent="@string/title_height"
        android:background="@color/title_background"
        >
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/title_loginactivity"
            android:textSize="@dimen/title_size"
            android:textColor="@color/text_title_color"
            android:textStyle="bold"
            />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_marginTopPercent="23%h"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/rounded_white_box_bg"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="@dimen/edittext_size"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edittext_hint" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/loginactivity_line_color" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textSize="@dimen/edittext_size"
                    android:textColor="@color/black"
                    android:textColorHint="@color/edittext_hint" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:background="@drawable/button_background_normal_selector"
                android:text="@string/login"
                android:textSize="@dimen/login_button"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/button_background_blue_selector"
            android:text="@string/register"
            android:textSize="@dimen/login_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
    </com.zhy.android.percent.support.PercentRelativeLayout>